# V-Engine

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.sh  setup_and_run.sh
assets/: README.md
docs/: SSR_Water_Rendering.md  Scene-Management-System.md  UI-System.md
shaders/: deferred_lighting.frag  deferred_lighting.vert  deferred_lighting_frag.spv  gbuffer.frag  gbuffer.vert  gbuffer_frag.spv  gbuffer_vert.spv  mesh.vert  pbr.frag  pbr.vert  pbr_frag.spv  pbr_vert.spv  simple.vert  simple_mesh.vert  ssr.frag  ssr.vert  ssr_frag.spv  water.frag  water.vert  water_frag.spv  water_vert.spv
src/: Camera.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTexture.h  main.cpp
src/core/: Utils.cpp  Utils.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h
src/passes/: ForwardPass.cpp  ForwardPass.h  GBuffer.cpp  GBuffer.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  RenderContext.h  RenderPassBase.h  SSRPass.cpp  SSRPass.h  WaterPass.cpp  WaterPass.h
src/renderer/: Camera.h  VulkanRenderer.cpp  VulkanRenderer.h
src/resources/: Mesh.cpp  Mesh.h  MeshManager.h  RenderSystem.h  TextureManager.h
src/scene/: Components.h  Entity.cpp  Entity.h  RayPicker.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SelectionManager.cpp  SelectionManager.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  UIManager.cpp  UIManager.h
src/ui/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  DebugPanel.cpp  DebugPanel.h  InspectorPanel.cpp  InspectorPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
